--- a/IATI_DFID_DATA.ipynb
+++ b/IATI_DFID_DATA.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "IATI_DFID_DATA.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyPoE4xi2Eq0UaOGdb1qUray",
       "include_colab_link": true
     },
@@ -39,11 +40,11 @@
       "metadata": {
         "id": "kxW-ZlIFwBeH",
         "colab_type": "code",
+        "outputId": "883de35f-1825-4cf4-d310-e1e46cde7f64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
-        },
-        "outputId": "883de35f-1825-4cf4-d310-e1e46cde7f64"
+        }
       },
       "source": [
         "# this imports pandas and io packages\n",
@@ -66,7 +67,7 @@
         "# this exports the filtered data to a new Excel file, with headers and without the Index column\n",
         "implementers.to_excel (r\"DFID_Uganda_implementers.xlsx\", index=False, header=True)\n"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
