--- a/IATI_DFID_DATA.ipynb
+++ b/IATI_DFID_DATA.ipynb
@@ -6,7 +6,7 @@
       "name": "IATI_DFID_DATA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPoE4xi2Eq0UaOGdb1qUray",
+      "authorship_tag": "ABX9TyMzF/IuXNd6NVsYs2RX4Fyc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,26 +36,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mLiq2M3J7j71",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is the the full pandas code. It's broken down into sections below."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kxW-ZlIFwBeH",
         "colab_type": "code",
-        "outputId": "883de35f-1825-4cf4-d310-e1e46cde7f64",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 521
-        }
+        "colab": {}
       },
       "source": [
-        "# this imports pandas and io packages\n",
+        "# this imports pandas and renames it as pd\n",
         "import pandas as pd\n",
-        "import io\n",
         "\n",
-        "# this fetches the data \n",
+        "# this fetches the CSV file from a URL and reads the contents\n",
         "datadoc = pd.read_csv(\"https://raw.githubusercontent.com/sj21446/IATI_data/master/DFID_Uganda_current_activities_04062020.csv\")\n",
+        "\n",
+        "# this gives an idea of whether all the data we were expecting is in datadoc - is it the right size/shape?\n",
+        "print(datadoc.shape())\n",
         "\n",
         "# this gives a readout of the first three lines of data, to check it's the right file.\n",
         "print(datadoc.head(3))\n",
+        "\n",
+        "# this gives a readout of the columns and the types of data in each\n",
+        "print(datadoc.dtypes())\n",
+        "\n",
         "\n",
         "# this brings back a list of implementing organisations currently funded by DFID in Uganda\n",
         "# together with the value of the transaction, the title of the project, the IATI identifier for the project and the status code for the project.\n",
@@ -68,6 +80,118 @@
         "implementers.to_excel (r\"DFID_Uganda_implementers.xlsx\", index=False, header=True)\n"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GaJHCxX33M0x",
+        "colab_type": "text"
+      },
+      "source": [
+        "First thing to do is to import the pandas package. When you're working with Pandas, it's common to abbreviate it to pd."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n74hPEwK8NYM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# this imports pandas and renames it as pd\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NdzC3Kg48SLc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Then we fetch the CSV file that we're going to be working on - this one happens to be on my Github repo. and create a DataFrame to hold the data, called datadoc"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9s1kbiqN8gdE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# this fetches the CSV file from a URL and reads the contents and creates a DataFrame called datadoc\n",
+        "datadoc = pd.read_csv(\"https://raw.githubusercontent.com/sj21446/IATI_data/master/DFID_Uganda_current_activities_04062020.csv\")\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PegP4FTF_4ZO",
+        "colab_type": "text"
+      },
+      "source": [
+        "This snippet gives us some feedback on the size and shape of datadoc, to see if its got all the data that we were expecting. The first number is the number of rows, and the second number is the number of columns."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1T2iUo-kADNq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4abd6aab-664d-4c8c-eadb-ec920f55598f"
+      },
+      "source": [
+        "# this gives an idea of whether all the data we were expecting is in datadoc - is it the right size/shape?\n",
+        "print(datadoc.shape)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(602, 74)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hqnox7vU8m6j",
+        "colab_type": "text"
+      },
+      "source": [
+        "Then we can call up the first three lines of datadoc, just to check that the data looks like what we were expecting:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FSTICAKx85ac",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "906ce475-9754-4d40-9bfc-4a9cc73b8ac5"
+      },
+      "source": [
+        "# this gives a readout of the first three lines of data, to check it's the right file.\n",
+        "print(datadoc.head(3))"
+      ],
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +204,108 @@
             "[3 rows x 74 columns]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "26zOQjYE86kL",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can also get a list of the column headings, and the type of data contained in each column in datadoc"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3KEQbRgr9J0d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
         },
+        "outputId": "f9b14ae1-110d-4e95-fb6f-d0aec230b267"
+      },
+      "source": [
+        "# this gives a readout of the columns and the types of data in each\n",
+        "print(datadoc.dtypes)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "transaction-type              int64\n",
+            "transaction-date             object\n",
+            "default-currency             object\n",
+            "transaction-value             int64\n",
+            "transaction_ref              object\n",
+            "                              ...  \n",
+            "collaboration-type-code       int64\n",
+            "default-finance-type-code     int64\n",
+            "default-flow-type-code        int64\n",
+            "default-aid-type-code        object\n",
+            "default-tied-status-code      int64\n",
+            "Length: 74, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EkK8JBS89Lt9",
+        "colab_type": "text"
+      },
+      "source": [
+        "If everything is looking like we were expecting, the next stage is to create a DataFrame (called implementers) which just includes the data that I want to work with, based on the column headings. I also ordered the columns in the order that I wanted, rather than the order that they were in, in the CSV."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7qS6MIf79g1M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# this brings back a list of implementing organisations currently funded by DFID in Uganda\n",
+        "# together with the value of the transaction, the title of the project, the IATI identifier for the project and the status code for the project.\n",
+        "implementers = pd.DataFrame(datadoc, columns=[\"participating-org (Implementing)\", \"transaction-value\", \"title\", \"activity-status-code\", \"iati-identifier\"])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fUc_0kYg-Upn",
+        "colab_type": "text"
+      },
+      "source": [
+        "And then I can check that this filtering has worked:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0w0sVVcO-gQc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 606
+        },
+        "outputId": "9c4a58f8-8511-478c-e115-20d1ec920af5"
+      },
+      "source": [
+        "# this tests that the filter is correct\n",
+        "display(implementers)"
+      ],
+      "execution_count": 13,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
@@ -226,6 +451,30 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gpD1qdpI-vD1",
+        "colab_type": "text"
+      },
+      "source": [
+        "If we've finished selecting the data, we can then export it in the file format we need - I've chosen Excel as I'm going to do further analysis in Excel or Power BI. This code exports the selected data to an Excel file called DFID_Uganda_implementers.xlsx. As Pandas treats each column as a series, each row of a column is also indexed (has a number attached to it, starting from 0). You can chose to include the Index number (index=True) as the first column or your Excel or CSV sheet, or not include it (index=False). You can also include the column headers by including header=True."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LjgPpFkb_EY0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# this exports the filtered data to a new Excel file, with headers and without the Index column\n",
+        "implementers.to_excel (r\"DFID_Uganda_implementers.xlsx\", index=False, header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
