--- a/IATI_DFID_DATA.ipynb
+++ b/IATI_DFID_DATA.ipynb
@@ -6,7 +6,7 @@
       "name": "IATI_DFID_DATA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMzF/IuXNd6NVsYs2RX4Fyc",
+      "authorship_tag": "ABX9TyPWdQrIUjHDo7O84bLTKzKT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,14 +60,16 @@
         "datadoc = pd.read_csv(\"https://raw.githubusercontent.com/sj21446/IATI_data/master/DFID_Uganda_current_activities_04062020.csv\")\n",
         "\n",
         "# this gives an idea of whether all the data we were expecting is in datadoc - is it the right size/shape?\n",
-        "print(datadoc.shape())\n",
+        "print(datadoc.shape)\n",
         "\n",
         "# this gives a readout of the first three lines of data, to check it's the right file.\n",
         "print(datadoc.head(3))\n",
         "\n",
         "# this gives a readout of the columns and the types of data in each\n",
-        "print(datadoc.dtypes())\n",
+        "print(datadoc.dtypes)\n",
         "\n",
+        "# this gives us a complete list of all the column headings\n",
+        "print(datadoc.columns)\n",
         "\n",
         "# this brings back a list of implementing organisations currently funded by DFID in Uganda\n",
         "# together with the value of the transaction, the title of the project, the IATI identifier for the project and the status code for the project.\n",
@@ -89,7 +91,7 @@
         "colab_type": "text"
       },
       "source": [
-        "First thing to do is to import the pandas package. When you're working with Pandas, it's common to abbreviate it to pd."
+        "Let's break it down. First thing to do is to import the pandas package. When you're working with Pandas, it's common to abbreviate it to pd."
       ]
     },
     {
@@ -107,13 +109,27 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-1Waz0TSHTDU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NdzC3Kg48SLc",
         "colab_type": "text"
       },
       "source": [
-        "Then we fetch the CSV file that we're going to be working on - this one happens to be on my Github repo. and create a DataFrame to hold the data, called datadoc"
+        "Then we fetch the CSV file that we're going to be working on - this one happens to be on my Github repo. It's a CSV file of all of DFID's activities in Uganda. We then create a DataFrame to hold the data, called datadoc"
       ]
     },
     {
@@ -249,6 +265,80 @@
             "default-aid-type-code        object\n",
             "default-tied-status-code      int64\n",
             "Length: 74, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9_cW578RGrBo",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can also get the column headings this way (without the types of data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t4pTiHAqGv3y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 697
+        },
+        "outputId": "7881147b-848d-4eea-d768-9c551b857102"
+      },
+      "source": [
+        "print(datadoc.columns)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Index(['transaction-type', 'transaction-date', 'default-currency',\n",
+            "       'transaction-value', 'transaction_ref', 'transaction_value_currency',\n",
+            "       'transaction_value_value-date', 'transaction_provider-org',\n",
+            "       'transaction_provider-org_ref',\n",
+            "       'transaction_provider-org_provider-activity-id',\n",
+            "       'transaction_receiver-org', 'transaction_receiver-org_ref',\n",
+            "       'transaction_receiver-org_receiver-activity-id',\n",
+            "       'transaction_description', 'transaction_flow-type_code',\n",
+            "       'transaction_finance-type_code', 'transaction_aid-type_code',\n",
+            "       'transaction_tied-status_code', 'transaction_disbursement-channel_code',\n",
+            "       'transaction_recipient-country-code', 'transaction_recipient-country',\n",
+            "       'transaction_recipient-region-code', 'transaction_recipient-region',\n",
+            "       'transaction_sector-code', 'transaction_sector',\n",
+            "       'transaction_sector-vocabulary', 'transaction_sector-vocabulary-code',\n",
+            "       'iati-identifier', 'hierarchy', 'last-updated-datetime',\n",
+            "       'default-language', 'reporting-org', 'reporting-org-ref',\n",
+            "       'reporting-org-type', 'reporting-org-type-code', 'title', 'description',\n",
+            "       'activity-status-code', 'start-planned', 'end-planned', 'start-actual',\n",
+            "       'end-actual', 'participating-org (Accountable)',\n",
+            "       'participating-org-ref (Accountable)',\n",
+            "       'participating-org-type (Accountable)',\n",
+            "       'participating-org-type-code (Accountable)',\n",
+            "       'participating-org (Funding)', 'participating-org-ref (Funding)',\n",
+            "       'participating-org-type (Funding)',\n",
+            "       'participating-org-type-code (Funding)',\n",
+            "       'participating-org (Extending)', 'participating-org-ref (Extending)',\n",
+            "       'participating-org-type (Extending)',\n",
+            "       'participating-org-type-code (Extending)',\n",
+            "       'participating-org (Implementing)',\n",
+            "       'participating-org-ref (Implementing)',\n",
+            "       'participating-org-type (Implementing)',\n",
+            "       'participating-org-type-code (Implementing)', 'recipient-country-code',\n",
+            "       'recipient-country', 'recipient-country-percentage',\n",
+            "       'recipient-region-code', 'recipient-region',\n",
+            "       'recipient-region-percentage', 'sector-code', 'sector',\n",
+            "       'sector-percentage', 'sector-vocabulary', 'sector-vocabulary-code',\n",
+            "       'collaboration-type-code', 'default-finance-type-code',\n",
+            "       'default-flow-type-code', 'default-aid-type-code',\n",
+            "       'default-tied-status-code'],\n",
+            "      dtype='object')\n"
           ],
           "name": "stdout"
         }
